@@ -1,3 +1,4 @@
+from django.conf import settings
 from django.core.paginator import Paginator
 from django.shortcuts import get_object_or_404, render
 from django.urls import reverse
@@ -16,6 +17,8 @@ from wagtail.images.permissions import permission_policy
 from wagtail.search import index as search_index
 
 permission_checker = PermissionPolicyChecker(permission_policy)
+
+CHOOSER_PAGE_SIZE = getattr(settings, 'WAGTAILIMAGES_CHOOSER_PAGE_SIZE', 12)
 
 
 def get_chooser_js_data():
@@ -106,7 +109,7 @@ def chooser(request):
                 images = images.filter(tags__name=tag_name)
 
         # Pagination
-        paginator = Paginator(images, per_page=12)
+        paginator = Paginator(images, per_page=CHOOSER_PAGE_SIZE)
         images = paginator.get_page(request.GET.get('p'))
 
         return render(request, "wagtailimages/chooser/results.html", {
@@ -116,7 +119,7 @@ def chooser(request):
             'will_select_format': request.GET.get('select_format')
         })
     else:
-        paginator = Paginator(images, per_page=12)
+        paginator = Paginator(images, per_page=CHOOSER_PAGE_SIZE)
         images = paginator.get_page(request.GET.get('p'))
 
         context = get_chooser_context(request)
@@ -187,7 +190,7 @@ def chooser_upload(request):
     for hook in hooks.get_hooks('construct_image_chooser_queryset'):
         images = hook(images, request)
 
-    paginator = Paginator(images, per_page=12)
+    paginator = Paginator(images, per_page=CHOOSER_PAGE_SIZE)
     images = paginator.get_page(request.GET.get('p'))
 
     context = get_chooser_context(request)
